Fixes the entities export
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1496 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/accounts.html.haml
+++ b/app/views/accountancy/accounts.html.haml
@@ -21,7 +21,7 @@
 :javascript
   window.toggleInterval=function() { toggleElement('interval', $('used_accounts').checked); }
   toggleInterval();
-
-=major_accounts_tag
-
-=dyta(:accounts)
+%table.accounts.invex
+  %tr
+    %td.tabs{:valign=>:top}=major_accounts_tabs_tag
+    %td.list{:valign=>:top}=dyta(:accounts)
