--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -175,7 +175,7 @@ html>body .flash { height:auto; min-height:32px; }
 .contact { padding: 5px 0 8px 4px; border:0.2px solid; border-color:#C9D7F1; background-color:#FEB;}
 
 
-table.formalize { border-collapse: collapse; margin-left: auto; margin-right: auto; }
+table.formalize { border-collapse: collapse; margin-left: auto; margin-right: auto; width: 100% }
 table.formalize tr.field td { border-bottom:  1px dotted #CCC; }
 table.formalize tr.field td label { color: #008;}
 table.formalize td.label { text-align:right; padding:1px 4px; color: #008; width: 50%; border-right: 0px dotted #CCC;  }
@@ -400,5 +400,13 @@ div.fastadd { background: #FC8; text-align:center; padding: 4px; margin: 4px 0; 
 #conditions .title { clear: both; background: #FEA; padding: 4px;}
 #conditions .title .right-menu { float: right; padding-left:8px;}
 #conditions .title a { background: url(../images/buttons/delete.png) no-repeat center left; padding: 2px 2px 2px 20px;}
-#conditions .title h3 { font-size: 13px }
+#conditions .title h3 { font-size: 13px; background: url(../images/buttons/filter.png) no-repeat center left; padding: 2px 2px 2px 20px; }
 #conditions .parameters { padding-top: 4px; }
+#conditions .param { padding: 2px; border-bottom: 1px dotted #AAA;}
+#conditions .param:last-child { border-bottom:none;}
+
+table.accounts tr td.tabs { width: 16em; }
+table.accounts tr td.list { /*border: 4px solid #BACFE6;*/ background:#BACFE6; padding:4px;}
+.major-accounts a, .major-accounts strong { background: #DBE4F6; display: block; -moz-border-radius-topleft: 8px; -moz-border-radius-bottomleft: 8px; padding:4px 8px; margin-bottom:2px; }
+.major-accounts strong { background: #BACFE6 }
+.major-accounts > *:last-child { margin-bottom: 0 }
