--- a/app/views/management/_sale_order_line_form.html.haml
+++ b/app/views/management/_sale_order_line_form.html.haml
@@ -12,8 +12,10 @@
   -f.field :sale_order_line, :annotation, :field=>:textarea
 #stocks=#render :partial=>"sale_order_line_stocks"
 #tracking=render :partial=>"sale_order_line_tracking"
-#subscription_number=render :partial=>"subscription_number"
-#subscription_date=render :partial=>"subscription_period"
+#subscription=render :partial=>"subscription_coordinates_form"
+
+-#subscription_number=render :partial=>"subscription_number"
+-#subscription_date=render :partial=>"subscription_period"
 
 -if @current_user.can?(:change_prices_on_sale)
   =formalize do |f|
@@ -26,8 +28,8 @@
     -f.title :give_discount
     -f.field :sale_order_line, :discount, :size=>5
 
-
-=observe_field(price_id, :url=>{:action => :subscription_find}, :frequency => 0.25, :with=>"sale_order_line_price_id")
+-#=observe_field(price_id, :url=>{:action => :subscription_find}, :frequency => 0.25, :with=>"sale_order_line_price_id")
+=observe_field(price_id, :url=>{:action=>:subscription_coordinates, :entity_id=>@sale_order.client_id}, :frequency=>0.25, :with=>"price_id", :update=>:subscription, :loading=>"onLoading()", :loaded=>"onLoaded()")
 =observe_field(price_id, :url=>{:action => :sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_price_id")
 -if @current_company.locations.size > 1
   =observe_field(location_id, :url=>{:action => :sale_order_line_tracking}, :frequency => 0.25, :with=>"sale_order_line_location_id")
