--- a/app/views/management/subscriptions.html.haml
+++ b/app/views/management/subscriptions.html.haml
@@ -1,14 +1,14 @@
 .search 
-  -form_tag do
+  -form_tag() do
     %table
       %tr
         %td.label=tc("subscription_nature")
-        %td.input=select_tag(:nature, options_for_select(@current_company.subscription_natures.collect{|x| [x.name, x.id]}, :selected=>session[:subscriptions][:nature]['id']) )
-        %td#subscription_options=render :partial=>"subscription_options"
+        %td.input=select_tag(:nature_id, options_for_select(@current_company.subscription_natures.collect{|x| [x.name, x.id]}, :selected=>params[:nature_id].to_i) ) # ||session[:subscriptions][:nature]['id']
+        %td#subscriptions_options=render :partial=>"subscriptions_options"
         %td=submit_tag tg("search_go")
 
 =dyta :subscriptions
 
-=observe_field("subscription_nature", :url=>{:action=>:subscription_options}, :update=>:subscription_options, :frequency => 0.25, :with=>"nature", :loading=>"onLoading()", :loaded=>"onLoaded()")
+=observe_field("nature_id", :url=>{:action=>:subscriptions}, :update=>:subscriptions_options, :frequency => 0.25, :with=>"nature_id", :loading=>"onLoading()", :loaded=>"onLoaded()")
 
 
