--- a/app/views/management/_purchase_order_line_form.html.haml
+++ b/app/views/management/_purchase_order_line_form.html.haml
@@ -1,9 +1,10 @@
 -product_id = nil
 =formalize do |f|
   -f.error :purchase_order_line
-  -product_id = f.field :purchase_order_line, :product_id, :choices=>{:reflection=>:products, :include_blank=>""}
+  -product_id = f.field :purchase_order_line, :product_id, :choices=>{:reflection=>:products, :include_blank=>""}, :new=>{:action=>:product_create}
   -f.field :purchase_order_line, :quantity
-  -f.field :purchase_order_line, :unit_id, :choices=>[]
+  -#f.field :purchase_order_line, :unit_id, :choices=>[]
+
   -if @price
     -f.field :price, :amount 
     -f.field :price, :tax_id ,:choices=>{:reflection=>:taxes}
