Add a table of futures events in Relations (#128)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1503 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/index.html.haml
+++ b/app/views/relations/index.html.haml
@@ -5,6 +5,11 @@
   %ul
     =li_link_to tc('nb_entities',:count=>@entities.size), :controller=>:relations, :action=>:entities
 
+-if @current_user.future_events.size > 0
+  %h2=tc(:future_events)
+  =dyta(:user_future_events)
+
 -if @current_company.events.size > 0
-  %h2=tc(:last_events)
+  %h2=tc(:recent_events)
   =dyta(:recent_events)
+
