--- a/app/views/management/_product_form.html.haml
+++ b/app/views/management/_product_form.html.haml
@@ -34,6 +34,8 @@
   -f.field :stock, :quantity_max
   -if @locations.size > 1
     -location_id = f.field :stock, :location_id, :choices=>{:reflection=>:locations}, :new=>{:action=>:location_create}
+-#price=render :partial=>'price_amount_form'
+
 =formalize do |f|
   -f.title :accountancy
   -f.field :product, :product_account_id, :choices=>{:reflection=>:products_accounts}, :new=>{:controller=>:accountancy, :action=>:account_create}, :html_options=>{:id=>'product_account'}
@@ -48,7 +50,10 @@
   toggleStocks();
   window.toggleChargeAccount = function() { toggleElement('charge_account', $('product_to_purchase').checked); }
   toggleChargeAccount();
-  window.toggleProductAccount = function() { toggleElement('product_account', $('product_to_sale').checked); }
+  window.toggleProductAccount = function() { 
+    toggleElement('product_account', $('product_to_sale').checked); 
+    /*toggleElement('price', $('product_to_sale').checked); */
+  }
   toggleProductAccount();
 
 =observe_field("product_nature_service", :frequency =>0.25, :function => "toggleService();")
