Finish to clean accountancy process
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1505 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/about.html.haml
+++ b/app/views/company/about.html.haml
@@ -1,7 +1,8 @@
-#about_us{:style=>'text-align: center; padding: 64px;'}
-  =link_to image_tag("ekylong.png"), "http://www.ekylibre.org"
-  %table.evalue
-    -for p in @properties
-      %tr
-        %td.label=p[0]
-        %td.value=p[1]
+#about-us
+  %div
+    =link_to image_tag("ekylong.png"), "http://www.ekylibre.org"
+    %table.evalue
+      -for p in @properties
+        %tr.evalue
+          %td.label=p[0]
+          %td.value=p[1]
