--- a/app/views/accountancy/_journal_record_form.html.haml
+++ b/app/views/accountancy/_journal_record_form.html.haml
@@ -5,7 +5,7 @@
   -f.field JournalRecord.human_attribute_name("journal"), link_to(@journal_record.journal.name, :action=>:journal, :id=>@journal.id)
   -f.field :journal_record, :number
   -f.field :journal_record, :printed_on
-  -f.field :journal_record, :created_on
+  -# f.field :journal_record, :created_on
 %table.dyta{:style=>"margin-bottom: 8px;"}
   %thead
     %tr
