--- a/app/views/company/_listing_form.html.haml
+++ b/app/views/company/_listing_form.html.haml
@@ -2,7 +2,7 @@
   -f.error :listing
   -f.title :subtitle
   -f.field :listing, :name
-  -f.field :listing, :root_model, :choices=>Company.reflections.select{|k,v| v.macro==:has_many}.collect{|a| [::I18n.t("activerecord.models.#{a[0].to_s.singularize}"), a[0].to_s.singularize]}.sort{|a,b| a[0].ascii<=>b[0].ascii}
+  -f.field :listing, :root_model, :choices=>EKYLIBRE_REFERENCES.keys.collect{|a| [::I18n.t("activerecord.models.#{a.to_s.singularize}"), a.to_s.singularize]}.sort{|a,b| a[0].ascii<=>b[0].ascii}
   -#f.field :listing, :query, :field=>:textarea, :options=>{:cols=>80, :rows=>12}
   -f.field :listing, :conditions, :field=>:textarea, :options=>{:cols=>80}
   -f.field :listing, :comment, :field=>:textarea
