--- a/app/views/company/import.html.haml
+++ b/app/views/company/import.html.haml
@@ -5,4 +5,4 @@
       -f.field tc("file_nature"), select_tag(:nature, options_for_select(@supported_files))
     .end
   .actions
-    =submit_tag tg(:import)
+    =submit_tag tg(:import), :confirm=>tg(:are_you_sure)
