Enhance subscriber filter
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1511 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_export_condition.html.haml
+++ b/app/views/relations/_entities_export_condition.html.haml
@@ -11,6 +11,9 @@
     %h3=condition_label(condition)
   .parameters
     =hidden_field_tag("conditions[#{id}][type]", condition)
+    .param
+      =check_box_tag("conditions[#{id}][use_timestamp]")
+      =tc("created_between", :started_on=>date_field_tag("conditions[#{id}][timestamp][started_on]", Date.today-6), :stopped_on=>date_field_tag("conditions[#{id}][timestamp][stopped_on]"))
     -if condition == "special-subscriber"
       .param
         -for nature in @current_company.subscription_natures
@@ -20,7 +23,8 @@
       -for nature in @current_company.subscription_natures
         %div{:id=>"conditions_#{id}_nature_#{nature.id}_detail", :style=>'display:none'}
           .param
-            =tc("subscriber_#{nature.nature}", :subscribed_on=>(nature.period? ? calendar_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]") : text_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]", nil, :size=>8)))
+            =check_box_tag("conditions[#{id}][#{nature.id}][use_subscribed_on]", "1", true)
+            =tc("subscriber_#{nature.nature}", :subscribed_on=>(nature.period? ? calendar_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]") : text_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]", nature.actual_number, :size=>8)))
           .param
             -for product in nature.products
               =check_box_tag("conditions[#{id}][#{nature.id}][products][#{product.id}]", "1", true, :id=>"conditions_#{id}_#{nature.id}_products_#{product.id}")
