Begins to work on payment "accountizability"
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1512 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -12,3 +12,5 @@
   %ul
     -for controller in menus[1..-1].collect{|x| x[:name]}
       =li_link_to tc(controller), :controller=>controller, :action=>:index
+
+=svg_test_tag
