--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -19,4 +19,4 @@
       %ul
         %li=link_to_remote(tc("home"), :url=>base_url.merge(:action=>:search, :article=>"company-index"), :update=>update, :complete=>complete, :loading=>"onLoading();", :loaded=>"onLoaded();")
         %li=link_to(tc("ekylibre"), "http://www.ekylibre.org")
-      .text-end &nbsp;
+      .end
