Add balance export in document_print
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1514 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/document_print.html.haml
+++ b/app/views/accountancy/document_print.html.haml
@@ -1,10 +1,23 @@
 -form_tag({:controller=>:company, :action=>:print}) do
-  =formalize do |f|
-    -f.title DocumentTemplate.human_name
-    -f.field DocumentTemplate.human_name, select_tag("id", options_for_select(@document_templates.collect{|d| [d.name, d.code]}, params[:code]), :id=>"template_code")
-  #document_options=render(:partial=>'document_options')
-  .actions
-    =submit_tag tg(:print), :name=>nil
+  %fieldset
+    %legend=tc(:print)
+    =formalize do |f|
+      -f.title DocumentTemplate.human_name
+      -f.field DocumentTemplate.human_name, select_tag("id", options_for_select(@document_templates.collect{|d| [d.name, d.code]}, params[:code]), :id=>"template_code")
+    #document_options=render(:partial=>'document_options')
+    .actions=submit_tag tg(:print), :name=>nil
 =observe_field "template_code", :update=>:document_options, :url=>{:action=>:document_print}, :with=>"code"
+
+-form_tag do
+  %fieldset
+    %legend=tc(:export)
+    =formalize do |f|
+      -f.title tc(:balance)
+      -f.field tg(:from), date_field_tag("started_on", @current_company.current_financialyear.started_on)
+      -f.field tg(:to),   date_field_tag("stopped_on", @current_company.current_financialyear.stopped_on)
+    .actions=submit_tag tg(:export), :name=>:export
+=observe_field "template_code", :update=>:document_options, :url=>{:action=>:document_print}, :with=>"code"
+
+
 
 
